--- a/TheLastActivist/Layouts/Start_Screen.xml
+++ b/TheLastActivist/Layouts/Start_Screen.xml
@@ -93,7 +93,7 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
-                <instance type="Sprite2" uid="45">
+                <instance type="Instructions" uid="45">
                     <properties>
                         <initial-visibility>Visible</initial-visibility>
                         <initial-animation>Default</initial-animation>
@@ -113,6 +113,30 @@
                         <hotspotY>0.501305461</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
+                    </world>
+                </instance>
+                <instance type="CreditsButton" uid="49">
+                    <properties>
+                        <type>Button</type>
+                        <text></text>
+                        <tooltip></tooltip>
+                        <initial-visibility>Visible</initial-visibility>
+                        <enabled>Yes</enabled>
+                        <auto-font-size>Yes</auto-font-size>
+                        <id-optional></id-optional>
+                        <checked>No</checked>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>633</x>
+                        <y>522</y>
+                        <z>0</z>
+                        <width>177</width>
+                        <height>47</height>
+                        <depth>0</depth>
+                        <hotspotX>0</hotspotX>
+                        <hotspotY>0</hotspotY>
                     </world>
                 </instance>
             </instances>
@@ -237,6 +261,28 @@
                         <depth>0</depth>
                         <hotspotX>0.504504502</hotspotX>
                         <hotspotY>0.5</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
+                <instance type="CreditsImage" uid="48">
+                    <properties>
+                        <initial-visibility>Visible</initial-visibility>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>0</initial-frame>
+                        <collisions>Enabled</collisions>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>718</x>
+                        <y>547</y>
+                        <z>0</z>
+                        <width>178.449447632</width>
+                        <height>52.563907623</height>
+                        <depth>0</depth>
+                        <hotspotX>0.500938058</hotspotX>
+                        <hotspotY>0.503184736</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
                     </world>
